01期问卷调研

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <div class="btn-group">
             <span class="btn">3.0 Comming Soon</span>
         </div>
+        <div class="tips">
+            <div class="img-wrapper">
+                <img src="qrcode.png" alt="qrcode" width="100">
+            </div>
+            <p>邀您进行 第01期「北京公交出行」小程序用户调研！</p>
+            <p><a href="https://wj.qq.com/s2/3325042/a627">点击这里</a>
+            或扫描上方二维码填写~</p>
+        </div>
     </div>
 
 </body>
