--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             <div class="img-wrapper">
                 <img src="qrcode.png" alt="qrcode" width="100">
             </div>
+            <p>邀您加入 北京公交出行微信用户群！</p>
+            <p>扫描上方二维码加入</p>
+        </div>
+        <div class="tips">
+            <div class="img-wrapper">
+                <img src="groupcode.jpeg" alt="qrcode" width="100">
+            </div>
             <p>邀您进行 第01期「北京公交出行」小程序用户调研！</p>
             <p><a href="https://wj.qq.com/s2/3325042/a627">点击这里</a>
             或扫描上方二维码填写~</p>
