update group qrcode

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         </div>
         <div class="tips">
             <div class="img-wrapper">
-                <img src="groupcode.jpeg" alt="qrcode" width="100">
+                <img src="groupcode.jpg" alt="qrcode" width="100">
             </div>
-            <p>邀您加入 北京公交出行微信用户群！</p>
-            <p>扫描上方二维码加入</p>
+            <p>邀您加入 北京公交出行用户群！</p>
+            <p>QQ群：422177997</p>
+            <p>微信群：扫描上方二维码加入</p>
         </div>
         <div class="tips">
             <div class="img-wrapper">
