--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
             <p>微信群：扫描上方二维码加入</p>
         </div>
         <div class="tips">
-            <div class="img-wrapper">
-                <img src="qrcode.png" alt="qrcode" width="100">
-            </div>
-            <p>邀您进行 第01期「北京公交出行」小程序用户调研！</p>
-            <p><a href="https://wj.qq.com/s2/3325042/a627">点击这里</a>
-            或扫描上方二维码填写~</p>
+            <p>小程序正式开源，欢迎开发者们参与共建！</p>
+            <p><a href="https://github.com/ddiu8081/weapp-bjbus">访问Github仓库</a></p>
         </div>
     </div>
 
